--- a/spotify/.gitignore
+++ b/spotify/.gitignore
@@ -7,7 +7,7 @@
 build
 # testing
 /coverage
-
+node_modules
 # production
 /build
 
@@ -17,6 +17,7 @@ build
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
