--- a/spotify/package.json
+++ b/spotify/package.json
@@ -11,9 +11,11 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "elasticsearch": "^16.7.1",
+    "firebase": "^8.0.2",
     "mixpanel-browser": "^2.39.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firebase-hooks": "^2.2.0",
     "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
